--- a/3-data-analysis.ipynb
+++ b/3-data-analysis.ipynb
@@ -11,7 +11,8 @@
     "from plotly.graph_objs import Figure\n",
     "from amazon.visuals import *\n",
     "# import nltk\n",
-    "# nltk.download(\"vader_lexicon\")"
+    "# nltk.download(\"vader_lexicon\")\n",
+    "# %pip uninstall polars"
    ]
   },
   {
@@ -21,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lf: pl.LazyFrame = pl.scan_parquet(\"data/processed/amazon-2023.parquet\")"
+    "lf: pl.LazyFrame=pl.scan_parquet(\"data/processed/amazon-2023.parquet\")"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "outputs": [],
    "source": [
     "fig: Figure = plot_histogram(lf, \"star_rating\")\n",
-    "fig.show()"
+    "fig.show()                                                                                                                                                                                                                                                                                                                                                                                                                          "
    ]
   },
   {
@@ -119,14 +120,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig: Figure = plot_sentiment(lf, \"sentiment discrepancy\", True)\n",
-    "fig.show()"
+    "# fig: Figure = plot_sentiment(lf, \"sentiment discrepancy\", True)\n",
+    "# fig.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
