--- a/4-logistic-regression.ipynb
+++ b/4-logistic-regression.ipynb
@@ -531,24 +531,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "132efe5c",
+   "execution_count": 13,
+   "id": "b38f2b0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# joblib.dump(model, \"data/logreg_tfidf.pkl\")\n",
-    "y_pred: np.ndarray = model.predict(X_test)\n",
-    "metrics: dict = get_metrics(y_test, y_pred, \"Logistic Regression\")\n",
-    "\n",
-    "# result = pl.DataFrame([metrics])\n",
-    "# result\n",
-    "# F1= 0.919511\n",
-    "f1_score(y_test, y_pred, 1)"
+    "def get_metrics(y_true: np.ndarray, y_pred: np.ndarray, model_name: str) -> dict:\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
+    "    return {\n",
+    "        \"Model\": model_name,\n",
+    "        \"Accuracy\": accuracy_score(y_true, y_pred),\n",
+    "        \"Precision\": precision_score(y_true, y_pred, zero_division=1),\n",
+    "        \"Recall\": recall_score(y_true, y_pred),\n",
+    "        \"F1 Score\": f1_score(y_true, y_pred),\n",
+    "        \"True Negative\": tn,\n",
+    "        \"False Positive\": fp,\n",
+    "        \"False Negative\": fn,\n",
+    "        \"True Positive\": tp,\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "132efe5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 9)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Model</th><th>Accuracy</th><th>Precision</th><th>Recall</th><th>F1 Score</th><th>True Negative</th><th>False Positive</th><th>False Negative</th><th>True Positive</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>&quot;Logistic Regression&quot;</td><td>0.8918146</td><td>0.912473</td><td>0.952372</td><td>0.931996</td><td>1504779</td><td>711112</td><td>370742</td><td>7413367</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 9)\n",
+       "┌───────────┬───────────┬───────────┬──────────┬───┬───────────┬───────────┬───────────┬───────────┐\n",
+       "│ Model     ┆ Accuracy  ┆ Precision ┆ Recall   ┆ … ┆ True      ┆ False     ┆ False     ┆ True      │\n",
+       "│ ---       ┆ ---       ┆ ---       ┆ ---      ┆   ┆ Negative  ┆ Positive  ┆ Negative  ┆ Positive  │\n",
+       "│ str       ┆ f64       ┆ f64       ┆ f64      ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---       │\n",
+       "│           ┆           ┆           ┆          ┆   ┆ i64       ┆ i64       ┆ i64       ┆ i64       │\n",
+       "╞═══════════╪═══════════╪═══════════╪══════════╪═══╪═══════════╪═══════════╪═══════════╪═══════════╡\n",
+       "│ Logistic  ┆ 0.8918146 ┆ 0.912473  ┆ 0.952372 ┆ … ┆ 1504779   ┆ 711112    ┆ 370742    ┆ 7413367   │\n",
+       "│ Regressio ┆           ┆           ┆          ┆   ┆           ┆           ┆           ┆           │\n",
+       "│ n         ┆           ┆           ┆          ┆   ┆           ┆           ┆           ┆           │\n",
+       "└───────────┴───────────┴───────────┴──────────┴───┴───────────┴───────────┴───────────┴───────────┘"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, \"data/logreg_tfidf.pkl\")\n",
+    "y_pred: np.ndarray = model.predict(X_test)\n",
+    "metrics: dict = get_metrics(y_test, y_pred, \"Logistic Regression\")\n",
+    "\n",
+    "# F1= 0.919511\n",
+    "# f1_score(y_test, y_pred)\n",
+    "result = pl.DataFrame([metrics])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "01d3d72f",
    "metadata": {},
    "outputs": [
@@ -576,7 +629,7 @@
          ],
          "yaxis": "y",
          "z": {
-          "bdata": "eA8CAPYhAABiOgAAcKEAAA==",
+          "bdata": "dx5xADaoBQDI2QoAC/YWAA==",
           "dtype": "i4",
           "shape": "2, 2"
          }
@@ -1441,8 +1494,8 @@
     }
    ],
    "source": [
-    "# fig: Figure = plot_confusion_matrix(result)\n",
-    "# fig.show()"
+    "fig: Figure = plot_confusion_matrix(result)\n",
+    "fig.show()"
    ]
   }
  ],
