--- a/6-kmeans.ipynb
+++ b/6-kmeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b7901c0f",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "d8e12f11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lf: pl.DataFrame = pl.scan_parquet(\"data/processed/amazon-2023.parquet\")"
+    "lf = pl.scan_parquet(\"data/processed/amazon-2023.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "dc9244c8",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "fde3825d",
    "metadata": {},
    "outputs": [],
@@ -49,23 +49,24 @@
     "])\n",
     "\n",
     "columns: list[str] = [\"mean_rating\", \"total_reviews\", \"brand_id\", \"category_id\", \"parent_asin\"]\n",
-    "lf = lf.select(columns)"
+    "lf = lf.select(columns)\n",
+    "lf=lf.drop(\"parent_asin\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "462397d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df: pl.DataFrame = lf.collect()\n",
-    "X: pl.DataFrame = df.drop(\"parent_asin\").to_numpy()"
+    "df: pl.DataFrame = lf.collect(engine=\"streaming\")\n",
+    "X: pl.DataFrame = df.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "990b3262",
    "metadata": {},
    "outputs": [],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "bc7a0ca1",
    "metadata": {},
    "outputs": [
@@ -92,7 +93,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>cluster</th><th>cluster_size</th><th>avg_mean_rating</th><th>avg_total_reviews</th><th>avg_brand_id</th><th>avg_category_id</th><th>top_brand_id</th><th>top_category_id</th></tr><tr><td>i32</td><td>u32</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>list[u32]</td><td>list[u32]</td></tr></thead><tbody><tr><td>0</td><td>173759</td><td>4.237223</td><td>2.963662</td><td>125641.190033</td><td>6.88716</td><td>[104360]</td><td>[5]</td></tr><tr><td>1</td><td>701879</td><td>4.207828</td><td>4.109774</td><td>10434.166891</td><td>6.749344</td><td>[21]</td><td>[7]</td></tr><tr><td>2</td><td>127859</td><td>4.255761</td><td>2.449628</td><td>205077.01346</td><td>7.223582</td><td>[172250]</td><td>[5]</td></tr><tr><td>3</td><td>274584</td><td>4.2127</td><td>3.42583</td><td>60019.671882</td><td>6.58373</td><td>[50580]</td><td>[7]</td></tr><tr><td>4</td><td>103789</td><td>4.301812</td><td>2.157396</td><td>294546.480263</td><td>7.538265</td><td>[262774]</td><td>[5]</td></tr></tbody></table></div>"
+       "<small>shape: (5, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>cluster</th><th>cluster_size</th><th>avg_mean_rating</th><th>avg_total_reviews</th><th>avg_brand_id</th><th>avg_category_id</th><th>top_brand_id</th><th>top_category_id</th></tr><tr><td>i32</td><td>u32</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>list[u32]</td><td>list[u32]</td></tr></thead><tbody><tr><td>0</td><td>5427048</td><td>4.104922</td><td>16.579857</td><td>610507.42722</td><td>451436.366671</td><td>[366564]</td><td>[487909]</td></tr><tr><td>1</td><td>1535537</td><td>4.323468</td><td>6.096428</td><td>4.0561e6</td><td>473927.347637</td><td>[3532404, 3513067]</td><td>[487906]</td></tr><tr><td>2</td><td>23914425</td><td>4.074856</td><td>15.136763</td><td>71162.548929</td><td>441133.504817</td><td>[86]</td><td>[487901]</td></tr><tr><td>3</td><td>1848924</td><td>4.280674</td><td>7.646283</td><td>2.7129e6</td><td>469303.456396</td><td>[2126527]</td><td>[487906]</td></tr><tr><td>4</td><td>2639394</td><td>4.199917</td><td>10.426479</td><td>1.5347e6</td><td>460076.901021</td><td>[1091724]</td><td>[487906]</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 8)\n",
@@ -102,20 +103,20 @@
        "│ i32     ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---       ┆ ---       │\n",
        "│         ┆ u32        ┆ f64        ┆ f64        ┆ f64        ┆ f64        ┆ list[u32] ┆ list[u32] │\n",
        "╞═════════╪════════════╪════════════╪════════════╪════════════╪════════════╪═══════════╪═══════════╡\n",
-       "│ 0       ┆ 173759     ┆ 4.237223   ┆ 2.963662   ┆ 125641.190 ┆ 6.88716    ┆ [104360]  ┆ [5]       │\n",
-       "│         ┆            ┆            ┆            ┆ 033        ┆            ┆           ┆           │\n",
-       "│ 1       ┆ 701879     ┆ 4.207828   ┆ 4.109774   ┆ 10434.1668 ┆ 6.749344   ┆ [21]      ┆ [7]       │\n",
-       "│         ┆            ┆            ┆            ┆ 91         ┆            ┆           ┆           │\n",
-       "│ 2       ┆ 127859     ┆ 4.255761   ┆ 2.449628   ┆ 205077.013 ┆ 7.223582   ┆ [172250]  ┆ [5]       │\n",
-       "│         ┆            ┆            ┆            ┆ 46         ┆            ┆           ┆           │\n",
-       "│ 3       ┆ 274584     ┆ 4.2127     ┆ 3.42583    ┆ 60019.6718 ┆ 6.58373    ┆ [50580]   ┆ [7]       │\n",
-       "│         ┆            ┆            ┆            ┆ 82         ┆            ┆           ┆           │\n",
-       "│ 4       ┆ 103789     ┆ 4.301812   ┆ 2.157396   ┆ 294546.480 ┆ 7.538265   ┆ [262774]  ┆ [5]       │\n",
-       "│         ┆            ┆            ┆            ┆ 263        ┆            ┆           ┆           │\n",
+       "│ 0       ┆ 5427048    ┆ 4.104922   ┆ 16.579857  ┆ 610507.427 ┆ 451436.366 ┆ [366564]  ┆ [487909]  │\n",
+       "│         ┆            ┆            ┆            ┆ 22         ┆ 671        ┆           ┆           │\n",
+       "│ 1       ┆ 1535537    ┆ 4.323468   ┆ 6.096428   ┆ 4.0561e6   ┆ 473927.347 ┆ [3532404, ┆ [487906]  │\n",
+       "│         ┆            ┆            ┆            ┆            ┆ 637        ┆ 3513067]  ┆           │\n",
+       "│ 2       ┆ 23914425   ┆ 4.074856   ┆ 15.136763  ┆ 71162.5489 ┆ 441133.504 ┆ [86]      ┆ [487901]  │\n",
+       "│         ┆            ┆            ┆            ┆ 29         ┆ 817        ┆           ┆           │\n",
+       "│ 3       ┆ 1848924    ┆ 4.280674   ┆ 7.646283   ┆ 2.7129e6   ┆ 469303.456 ┆ [2126527] ┆ [487906]  │\n",
+       "│         ┆            ┆            ┆            ┆            ┆ 396        ┆           ┆           │\n",
+       "│ 4       ┆ 2639394    ┆ 4.199917   ┆ 10.426479  ┆ 1.5347e6   ┆ 460076.901 ┆ [1091724] ┆ [487906]  │\n",
+       "│         ┆            ┆            ┆            ┆            ┆ 021        ┆           ┆           │\n",
        "└─────────┴────────────┴────────────┴────────────┴────────────┴────────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
