--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35c6e676",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Lorenzo\\Documents\\comp3610A3\n"
+      "/home/glor/300/comp3610A3/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "%cd ~/Documents/comp3610A3\n",
     "import polars as pl\n",
     "import numpy as np\n",
     "import implicit\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "c19564dc",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "    pl.col(\"item_cat\").to_physical().alias(\"item_idx\")\n",
     "])\n",
     "\n",
-    "df: pl.DataFrame = lf.collect()"
+    "df: pl.DataFrame = lf.head(1_000).collect()"
    ]
   },
   {
@@ -201,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
