--- a/6-kmeans.ipynb
+++ b/6-kmeans.ipynb
@@ -93,7 +93,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>cluster</th><th>cluster_size</th><th>avg_mean_rating</th><th>avg_total_reviews</th><th>avg_brand_id</th><th>avg_category_id</th><th>top_brand_id</th><th>top_category_id</th></tr><tr><td>i32</td><td>u32</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>list[u32]</td><td>list[u32]</td></tr></thead><tbody><tr><td>0</td><td>5427048</td><td>4.104922</td><td>16.579857</td><td>610507.42722</td><td>451436.366671</td><td>[366564]</td><td>[487909]</td></tr><tr><td>1</td><td>1535537</td><td>4.323468</td><td>6.096428</td><td>4.0561e6</td><td>473927.347637</td><td>[3532404, 3513067]</td><td>[487906]</td></tr><tr><td>2</td><td>23914425</td><td>4.074856</td><td>15.136763</td><td>71162.548929</td><td>441133.504817</td><td>[86]</td><td>[487901]</td></tr><tr><td>3</td><td>1848924</td><td>4.280674</td><td>7.646283</td><td>2.7129e6</td><td>469303.456396</td><td>[2126527]</td><td>[487906]</td></tr><tr><td>4</td><td>2639394</td><td>4.199917</td><td>10.426479</td><td>1.5347e6</td><td>460076.901021</td><td>[1091724]</td><td>[487906]</td></tr></tbody></table></div>"
+       "<small>shape: (5, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>cluster</th><th>cluster_size</th><th>avg_mean_rating</th><th>avg_total_reviews</th><th>avg_brand_id</th><th>avg_category_id</th><th>top_brand_id</th><th>top_category_id</th></tr><tr><td>i32</td><td>u32</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>list[u32]</td><td>list[u32]</td></tr></thead><tbody><tr><td>0</td><td>23317743</td><td>4.08529</td><td>16.288415</td><td>104126.549329</td><td>588703.963657</td><td>[31]</td><td>[588849]</td></tr><tr><td>1</td><td>2466456</td><td>4.258269</td><td>9.041701</td><td>2.3032e6</td><td>555780.659087</td><td>[1682507]</td><td>[588839]</td></tr><tr><td>2</td><td>1895918</td><td>4.319212</td><td>6.382607</td><td>3.9012e6</td><td>566696.411559</td><td>[3159577]</td><td>[588839]</td></tr><tr><td>3</td><td>4397631</td><td>4.149755</td><td>12.030138</td><td>991741.20988</td><td>547324.914706</td><td>[638029]</td><td>[588839]</td></tr><tr><td>4</td><td>3287580</td><td>4.00405</td><td>10.910735</td><td>120418.439924</td><td>52730.792819</td><td>[31]</td><td>[31]</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 8)\n",
@@ -103,16 +103,16 @@
        "│ i32     ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---       ┆ ---       │\n",
        "│         ┆ u32        ┆ f64        ┆ f64        ┆ f64        ┆ f64        ┆ list[u32] ┆ list[u32] │\n",
        "╞═════════╪════════════╪════════════╪════════════╪════════════╪════════════╪═══════════╪═══════════╡\n",
-       "│ 0       ┆ 5427048    ┆ 4.104922   ┆ 16.579857  ┆ 610507.427 ┆ 451436.366 ┆ [366564]  ┆ [487909]  │\n",
-       "│         ┆            ┆            ┆            ┆ 22         ┆ 671        ┆           ┆           │\n",
-       "│ 1       ┆ 1535537    ┆ 4.323468   ┆ 6.096428   ┆ 4.0561e6   ┆ 473927.347 ┆ [3532404, ┆ [487906]  │\n",
-       "│         ┆            ┆            ┆            ┆            ┆ 637        ┆ 3513067]  ┆           │\n",
-       "│ 2       ┆ 23914425   ┆ 4.074856   ┆ 15.136763  ┆ 71162.5489 ┆ 441133.504 ┆ [86]      ┆ [487901]  │\n",
-       "│         ┆            ┆            ┆            ┆ 29         ┆ 817        ┆           ┆           │\n",
-       "│ 3       ┆ 1848924    ┆ 4.280674   ┆ 7.646283   ┆ 2.7129e6   ┆ 469303.456 ┆ [2126527] ┆ [487906]  │\n",
-       "│         ┆            ┆            ┆            ┆            ┆ 396        ┆           ┆           │\n",
-       "│ 4       ┆ 2639394    ┆ 4.199917   ┆ 10.426479  ┆ 1.5347e6   ┆ 460076.901 ┆ [1091724] ┆ [487906]  │\n",
-       "│         ┆            ┆            ┆            ┆            ┆ 021        ┆           ┆           │\n",
+       "│ 0       ┆ 23317743   ┆ 4.08529    ┆ 16.288415  ┆ 104126.549 ┆ 588703.963 ┆ [31]      ┆ [588849]  │\n",
+       "│         ┆            ┆            ┆            ┆ 329        ┆ 657        ┆           ┆           │\n",
+       "│ 1       ┆ 2466456    ┆ 4.258269   ┆ 9.041701   ┆ 2.3032e6   ┆ 555780.659 ┆ [1682507] ┆ [588839]  │\n",
+       "│         ┆            ┆            ┆            ┆            ┆ 087        ┆           ┆           │\n",
+       "│ 2       ┆ 1895918    ┆ 4.319212   ┆ 6.382607   ┆ 3.9012e6   ┆ 566696.411 ┆ [3159577] ┆ [588839]  │\n",
+       "│         ┆            ┆            ┆            ┆            ┆ 559        ┆           ┆           │\n",
+       "│ 3       ┆ 4397631    ┆ 4.149755   ┆ 12.030138  ┆ 991741.209 ┆ 547324.914 ┆ [638029]  ┆ [588839]  │\n",
+       "│         ┆            ┆            ┆            ┆ 88         ┆ 706        ┆           ┆           │\n",
+       "│ 4       ┆ 3287580    ┆ 4.00405    ┆ 10.910735  ┆ 120418.439 ┆ 52730.7928 ┆ [31]      ┆ [31]      │\n",
+       "│         ┆            ┆            ┆            ┆ 924        ┆ 19         ┆           ┆           │\n",
        "└─────────┴────────────┴────────────┴────────────┴────────────┴────────────┴───────────┴───────────┘"
       ]
      },
