--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "35c6e676",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/glor/300/comp3610A3/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import polars as pl\n",
     "import numpy as np\n",
@@ -24,12 +15,13 @@
     "from scipy.sparse import coo_matrix, csr_array\n",
     "from amazon.models import normalize_scores  \n",
     "import random\n",
+    "import gc\n",
     "random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c19564dc",
    "metadata": {},
    "outputs": [],
@@ -48,12 +40,12 @@
     "    pl.col(\"item_cat\").to_physical().alias(\"item_idx\")\n",
     "])\n",
     "\n",
-    "df: pl.DataFrame = lf.head(1_000).collect()"
+    "df: pl.DataFrame = lf.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "adf149f3",
    "metadata": {},
    "outputs": [],
@@ -74,12 +66,15 @@
     "train_ratings = ratings_np[train_indices]\n",
     "\n",
     "test_user_indices, test_item_indices = user_indices_np[test_indices], item_indices_np[test_indices]\n",
-    "test_ratings = ratings_np[test_indices]"
+    "test_ratings = ratings_np[test_indices]\n",
+    "\n",
+    "del df\n",
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f187f3f5",
    "metadata": {},
    "outputs": [],
@@ -90,25 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6bb7d317",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27fcce89d14e46e1ab3b911f6f9b892e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/15 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = implicit.als.AlternatingLeastSquares(\n",
     "    factors=50, regularization=0.01, iterations=15, random_state=42, use_gpu=False\n",
@@ -118,18 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "01e93c82",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root-mean-square error (RMSE) on test data = 4.4926\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicted_ratings_test: list[float] = [\n",
     "    model.user_factors[user_idx, :].dot(model.item_factors[item_idx, :])\n",
@@ -142,43 +114,17 @@
     "    print(f\"Root-mean-square error (RMSE) on test data = {rmse:.4f}\")\n",
     "else:\n",
     "    print(\"Warning: No test ratings could be predicted.\")\n",
-    "    rmse = float('nan')"
+    "    rmse = float('nan')\n",
+    "\n",
+    "# Root-mean-square error (RMSE) on test data = 4.4926"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "3f6c432e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "User AGCYDOSYCLJAPBNO4T7CUKBSXRDA (idx=33889):\n",
-      "  ASIN B001IKCGLM — pred. rating 5.00\n",
-      "  ASIN B00RQPUV0Q — pred. rating 4.51\n",
-      "  ASIN B07FZ8S74R — pred. rating 4.12\n",
-      "  ASIN B01LXZDPDR — pred. rating 3.82\n",
-      "  ASIN B000P0LNRE — pred. rating 3.65\n",
-      "\n",
-      "User AGLKX4WZSC5DTW2N657GC7XDF66Q (idx=7639):\n",
-      "  ASIN B005UEB96K — pred. rating 5.00\n",
-      "  ASIN B01415QHYW — pred. rating 3.76\n",
-      "  ASIN B00081J3N6 — pred. rating 3.66\n",
-      "  ASIN B009EDSWJA — pred. rating 3.34\n",
-      "  ASIN B00ECHYTBI — pred. rating 3.32\n",
-      "\n",
-      "User AFVYFZDT62MIXIEGU4IAOAAOYWXQ (idx=83994):\n",
-      "  ASIN B00TSUGXKE — pred. rating 5.00\n",
-      "  ASIN B00IKM5N02 — pred. rating 4.61\n",
-      "  ASIN B00ZV9RDKK — pred. rating 4.54\n",
-      "  ASIN B01DFKC2SO — pred. rating 4.11\n",
-      "  ASIN B010Q57T02 — pred. rating 3.99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% Demo: Top‑5 recommendations for 3 random test users\n",
     "unique_test_users: np.ndarray = np.unique(test_user_indices)\n",
