--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35c6e676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/glor/300/comp3610A3/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "import numpy as np\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c19564dc",
    "metadata": {},
    "outputs": [],
@@ -45,10 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "adf149f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_users, unique_items = df[\"user_cat\"].unique().sort(), df[\"item_cat\"].unique().sort()\n",
     "\n",
@@ -74,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f187f3f5",
    "metadata": {},
    "outputs": [],
@@ -85,10 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6bb7d317",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/glor/300/comp3610A3/venv/lib/python3.12/site-packages/implicit/cpu/als.py:95: RuntimeWarning: OpenBLAS is configured to use 24 threads. It is highly recommended to disable its internal threadpool by setting the environment variable 'OPENBLAS_NUM_THREADS=1' or by calling 'threadpoolctl.threadpool_limits(1, \"blas\")'. Having OpenBLAS use a threadpool can lead to severe performance issues here.\n",
+      "  check_blas_config()\n",
+      "100%|██████████| 15/15 [1:11:14<00:00, 284.96s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "model = implicit.als.AlternatingLeastSquares(\n",
     "    factors=50, regularization=0.01, iterations=15, random_state=42, use_gpu=False\n",
@@ -98,10 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "01e93c82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root-mean-square error (RMSE) on test data = 4.4181\n"
+     ]
+    }
+   ],
    "source": [
     "predicted_ratings_test: list[float] = [\n",
     "    model.user_factors[user_idx, :].dot(model.item_factors[item_idx, :])\n",
@@ -121,10 +159,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3f6c432e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "User AECVLWXQSOTOA4R7IB4KWTUB4H3Q (idx=3970955):\n",
+      "  ASIN B01MFGX5GI — pred. rating 5.00\n",
+      "  ASIN B07Q5TL9SQ — pred. rating 4.78\n",
+      "  ASIN B06Y1264PX — pred. rating 4.76\n",
+      "  ASIN B00K2EOONI — pred. rating 4.73\n",
+      "  ASIN B07MV8SWZF — pred. rating 4.68\n",
+      "\n",
+      "User AFTKJPWKJIC7R3J23RVC5JYPUJGA (idx=876054):\n",
+      "  ASIN B00DS842HS — pred. rating 5.00\n",
+      "  ASIN B00FLYWNYQ — pred. rating 4.44\n",
+      "  ASIN B0009X29WK — pred. rating 4.36\n",
+      "  ASIN B00016XJ4M — pred. rating 4.16\n",
+      "  ASIN B0026HDURA — pred. rating 4.14\n",
+      "\n",
+      "User AEJPJARKMDB6YBVFJDWYGGONXV4Q (idx=10046557):\n",
+      "  ASIN B079QHML21 — pred. rating 5.00\n",
+      "  ASIN B001T7QJ9O — pred. rating 4.50\n",
+      "  ASIN B0043T7FXE — pred. rating 4.49\n",
+      "  ASIN B004S8F7QM — pred. rating 4.37\n",
+      "  ASIN B003NR57BY — pred. rating 4.12\n"
+     ]
+    }
+   ],
    "source": [
     "# %% Demo: Top‑5 recommendations for 3 random test users\n",
     "unique_test_users: np.ndarray = np.unique(test_user_indices)\n",
