--- a/5-als-system.ipynb
+++ b/5-als-system.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "01e93c82",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,8 @@
     "    print(\"Warning: No test ratings could be predicted.\")\n",
     "    rmse = float('nan')\n",
     "\n",
-    "# Root-mean-square error (RMSE) on test data = 4.4926"
+    "# Sample Root-mean-square error (RMSE) on test data = 4.4926\n",
+    "# Full Root-mean-square error (RMSE) on test data = 4.4181"
    ]
   },
   {
