--- a/1-data-acquisition.ipynb
+++ b/1-data-acquisition.ipynb
@@ -7,10 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# os.environ[\"HF_DATASETS_CACHE\"] = \".cache\"\n",
-    "from bigdata_a3_utils import get_cache_directory\n",
-    "from amazon.utils import create_directories, download_data\n",
+    "from amazon.utils import create_directories, download_data, get_cache_directory\n",
     "from amazon.constants import *"
    ]
   },
@@ -21,8 +18,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_dir = get_cache_directory(verbose=True)\n",
+    "get_cache_directory(verbose=True)\n",
     "create_directories(DATA_PATHS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c2ae337",
+   "metadata": {},
+   "source": [
+    "The download data function does xyz storing data in raw"
    ]
   },
   {
@@ -32,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for category in ALL_CATEGORIES[33:]:\n",
+    "for category in ALL_CATEGORIES:\n",
     "    print(f\"Downloading {category}...\\n\")\n",
-    "    # download_data(category, REVIEW)\n",
+    "    download_data(category, REVIEW)\n",
     "    download_data(category, META)"
    ]
   }
