--- a/1-data-acquisition.ipynb
+++ b/1-data-acquisition.ipynb
@@ -27,7 +27,7 @@
    "id": "8c2ae337",
    "metadata": {},
    "source": [
-    "The download data function does xyz storing data in raw"
+    "download_data(category, fileLocation) downloads the dataset for the specified category, converts it to a Parquet file, and saves it to the given folder location"
    ]
   },
   {
@@ -46,7 +46,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
