--- a/1-data-acquisition.ipynb
+++ b/1-data-acquisition.ipynb
@@ -27,7 +27,9 @@
    "id": "8c2ae337",
    "metadata": {},
    "source": [
-    "download_data(category, fileLocation) downloads the dataset for the specified category, converts it to a Parquet file, and saves it to the given folder location"
+    "`download_data()` checks if the corresponding Parquet file already exists; if not, it downloads the data, saves it as a Parquet file, clears the Hugging Face cache, and runs garbage collection freeing up ram.\n",
+    "\n",
+    "The loop calls `download_data()` for each category in `ALL_CATEGORIES` for both review and metadata types. Utility functions are included under the hood to optimize performance."
    ]
   },
   {
